working on generative model

--- a/Building a demo pipeline.ipynb
+++ b/Building a demo pipeline.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -22,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "twin = mido.MidiFile('data/twinkle.mid')\n",
-    "twin2 = mido.MidiFile('data/twinkle_twinkle.mid')\n",
-    "simp = mido.MidiFile('data/simple_test.mid')\n",
-    "simp2 = mido.MidiFile('data/simple_test_2notes.mid')\n",
-    "song = mido.MidiFile('data/bags_groove_jh.mid')\n",
-    "mond = mido.MidiFile('data/mond_3.mid')\n",
-    "abba = mido.MidiFile('data/ABBA_-_Dancing_Queen.mid')\n",
-    "bach = mido.MidiFile('data/bach_variations_sn.mid')\n",
-    "cop = mido.MidiFile('data/appspg13.mid')\n",
-    "chords = mido.MidiFile('deeplearningnet/data/Nottingham/train/ashover_simple_chords_1.mid')"
+    "twin = mido.MidiFile('data/random/twinkle.mid')\n",
+    "# twin2 = mido.MidiFile('data/twinkle_twinkle.mid')\n",
+    "# simp = mido.MidiFile('data/simple_test.mid')\n",
+    "# simp2 = mido.MidiFile('data/simple_test_2notes.mid')\n",
+    "# song = mido.MidiFile('data/bags_groove_jh.mid')\n",
+    "# mond = mido.MidiFile('data/mond_3.mid')\n",
+    "# abba = mido.MidiFile('data/ABBA_-_Dancing_Queen.mid')\n",
+    "# bach = mido.MidiFile('data/bach_variations_sn.mid')\n",
+    "# cop = mido.MidiFile('data/appspg13.mid')\n",
+    "# chords = mido.MidiFile('deeplearningnet/data/Nottingham/train/ashover_simple_chords_1.mid')"
    ]
   },
   {
@@ -103,13 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "s = music21.converter.parse('data/twinkle.mid')"
+    "s = music21.converter.parse('data/random/twinkle.mid')"
    ]
   },
   {
@@ -121,15 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# creates notelist - a list for all the notes\n",
     "\n",
-    "midifile = chords\n",
+    "midifile = twin\n",
     "\n",
     "# note_list = (note, start, duration)\n",
     "# have to address if notes are not perfectly inside a tick_step\n",
@@ -170,14 +187,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23040"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "steps = int(ceil(counter/tick_step))\n",
     "music_mat = np.zeros([steps, int(np.diff(note_range))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "384"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(60, 0, 8),\n",
+       " (60, 8, 8),\n",
+       " (67, 16, 8),\n",
+       " (67, 24, 8),\n",
+       " (69, 32, 8),\n",
+       " (69, 40, 8),\n",
+       " (67, 48, 16),\n",
+       " (65, 64, 8),\n",
+       " (65, 72, 8),\n",
+       " (64, 80, 8),\n",
+       " (64, 88, 8),\n",
+       " (62, 96, 8),\n",
+       " (62, 104, 8),\n",
+       " (60, 112, 16),\n",
+       " (67, 128, 8),\n",
+       " (67, 136, 8),\n",
+       " (65, 144, 8),\n",
+       " (65, 152, 8),\n",
+       " (64, 160, 8),\n",
+       " (64, 168, 8),\n",
+       " (62, 176, 16),\n",
+       " (67, 192, 8),\n",
+       " (67, 200, 8),\n",
+       " (65, 208, 8),\n",
+       " (65, 216, 8),\n",
+       " (64, 224, 8),\n",
+       " (64, 232, 8),\n",
+       " (62, 240, 16),\n",
+       " (60, 256, 8),\n",
+       " (60, 264, 8),\n",
+       " (67, 272, 8),\n",
+       " (67, 280, 8),\n",
+       " (69, 288, 8),\n",
+       " (69, 296, 8),\n",
+       " (67, 304, 16),\n",
+       " (65, 320, 8),\n",
+       " (65, 328, 8),\n",
+       " (64, 336, 8),\n",
+       " (64, 344, 8),\n",
+       " (62, 352, 8),\n",
+       " (62, 360, 8),\n",
+       " (60, 368, 16)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notelist"
    ]
   },
   {
