started utils file

--- a/Buliding modules.ipynb
+++ b/Buliding modules.ipynb
@@ -99,13 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def make_musicmat(notelist, steps, note_range=(36,84)):\n",
+    "    \"\"\" turns a notelist into a musicmat object\n",
+    "    \"\"\"\n",
     "    music_mat = np.zeros([steps, int(np.diff(note_range))])\n",
     "    cnt = 0\n",
     "    for nt in notelist:\n",
@@ -118,20 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def segmentize(data, maxlen, step):\n",
+    "def segmentize(musicmat, maxlen, step):\n",
+    "    \"\"\" Converts a musicmat matrix into \n",
+    "    a 3D matrix with slices of length maxlen\n",
+    "    \"\"\"\n",
     "    X = []\n",
     "    y = []\n",
-    "    steps = data.shape[0]\n",
+    "    steps = musicmat.shape[0]\n",
     "    for ix in range(0, steps-maxlen-1, step):\n",
     "        end = ix + maxlen\n",
-    "        X.append(data[ix:end:1, :])\n",
-    "        y.append(data[end+1,:])\n",
+    "        X.append(musicmat[ix:end:1, :])\n",
+    "        y.append(musicmat[end+1,:])\n",
     "    X = np.stack(X)\n",
     "    y = np.stack(y)\n",
     "    return X,y"
@@ -350,7 +355,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -364,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
